--- a/笔记.md
+++ b/笔记.md
@@ -10,3 +10,8 @@
 9. 写一个错误页面, 路由调用失败或者代码出现bug, 会跳到错误页面去
 10. 公共的静态页面可以写在assets里, 然后nuxt.config.js里引入
 11. 发布线上时需要将.nuxt, assets, package.json, nuxt.config.js, static放到Nginx里进行代理
+
+
+
+
+[进度-pages/keepalive](https://nuxt.com.cn/docs/guide/directory-structure/pages)
